--- a/categories.html
+++ b/categories.html
@@ -4,26 +4,26 @@
   <meta charset='utf-8'>
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <link rel="stylesheet" type="text/css" href="//www.inpool.xyz/theme/css/stylesheet.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="//www.inpool.xyz/theme/css/pygment.css" media="screen">
-  <link rel="stylesheet" type="text/css" href="//www.inpool.xyz/theme/css/print.css" media="print">
+  <link rel="stylesheet" type="text/css" href="./theme/css/stylesheet.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="./theme/css/pygment.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="./theme/css/print.css" media="print">
   	<link href="//www.inpool.xyz/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="英银坡'S BLOG Atom Feed" />
   <!--[if lt IE 9]>
-  <script src="//www.inpool.xyz/theme/js/html5.js"></script>
+  <script src="./theme/js/html5.js"></script>
   <![endif]-->
   <title>英银坡'S BLOG</title>
 </head>
 <body>
   <header>
     <div class="inner">
-      <h1><a href="//www.inpool.xyz/index.html">英银坡'S BLOG</a></h1>
+      <h1><a href="./index.html">英银坡'S BLOG</a></h1>
     </div>
   </header>
   <div id="content-wrapper">
     <div class="inner clearfix">
       <section id="main-content">
 	<ul>
-		<li><a href="//www.inpool.xyz/category/tools.html">工具</a></li>
+		<li><a href="./category/tools.html">工具</a></li>
 	</ul>
       </section>
       <aside id="sidebar">
@@ -37,19 +37,19 @@
         <div class="pannel">
           <h6>分类</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/category/tools.html">工具 <sup>5</sup></a></li>
+            <li><a href="./category/tools.html">工具 <sup>6</sup></a></li>
           </ul>
         </div>
         <div class="pannel">
           <h6>标签</h6>
           <ul class="side-nav">
-            <li><a href="//www.inpool.xyz/tag/blog.html">blog <sup>2</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/package-management.html">package management <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/pelican.html">pelican <sup>3</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/pip.html">pip <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/plugin.html">plugin <sup>1</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/python.html">python <sup>2</sup></a></li>
-            <li><a href="//www.inpool.xyz/tag/restructuredtext.html">reStructuredText <sup>2</sup></a></li>
+            <li><a href="./tag/blog.html">blog <sup>2</sup></a></li>
+            <li><a href="./tag/package-management.html">package management <sup>1</sup></a></li>
+            <li><a href="./tag/pelican.html">pelican <sup>4</sup></a></li>
+            <li><a href="./tag/pip.html">pip <sup>1</sup></a></li>
+            <li><a href="./tag/plugin.html">plugin <sup>1</sup></a></li>
+            <li><a href="./tag/python.html">python <sup>3</sup></a></li>
+            <li><a href="./tag/restructuredtext.html">reStructuredText <sup>3</sup></a></li>
           </ul>
         </div>
 
